# email_llm_search

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py
email_llm_search/: __init__.py  __main__.py  db_manager.py  embedding_manager.py  imap_manager.py  langchain_manager.py  mail_processor.py  mail_searcher.py  mail_searcher_context.py  main.py  types.py  vector_db_manager.py
email_llm_search/controllers/: __init__.py  rest_controller.py  rest_types.py
email_llm_search/mails/: __init__.py  imap_manager.py  mail_processor.py  mailing_manager.py  mails_types.py
static/: index.html
tests/: __init__.py  test_langchain_manager.py  test_mail_processor.py
tests/mails/: __init__.py  test_mail_processor.py
