[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_llm_search"
version = "0.1.0"
description = "Search emails using LLM and vector embeddings"
readme = "README.md"
authors = [
    {name = "petrovito", email = "pjotr.tech@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch==2.3.1+cpu",
    "sentence-transformers",
    "chromadb",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
email-llm-search = "email_llm_search.main:run"

[tool.setuptools]
packages = ["email_llm_search"]

[tool.pytest.ini_options]
testpaths = ["tests"] 